# rust-sand-engine

./: .gitignore  .gitmodules  Cargo.toml  README.md  app.wasm  block_code.rs  data.json  index.html  production.bat  replicant.json  wasm.bat
.cargo/: config.toml
blockly/: .gitignore  package-lock.json  package.json
blockly/src/: index.css  index.html  index.js  prueba.json  toolbox.js
blockly/src/blocks/: json.js
blockly/src/generators/: json.js
crates/app/: Cargo.toml
crates/app-core/: Cargo.toml
crates/app-core/.cargo/: config.toml
crates/app-core/src/: api.rs  lib.rs
crates/app-core/src/api/: color.rs  custom_range.rs  order_scheme.rs  particle.rs  plugin.rs  simulation.rs  simulation_state.rs  vec2.rs
crates/app/src/: commands.rs  dylib_loader.rs  main.rs  wasm_bindings.rs
crates/app/src/app_core/: api.rs  mod.rs
crates/app/src/app_core/api/: custom_range.rs  order_scheme.rs  plugin.rs  simulation.rs  simulation_state.rs
crates/app/src/entities/: brush.rs  debug.rs  dylib_loader.rs  entity.rs  message_queue.rs  mod.rs  state.rs  universe.rs
crates/app/src/integrated_particles/: mod.rs  plugins.rs
crates/app/src/integrated_particles/plugins/: dust.rs  lava.rs  sand.rs  steam.rs  water.rs
crates/counter/: Cargo.toml
crates/counter/src/: lib.rs
crates/default-plugins/: Cargo.toml
crates/default-plugins/src/: lib.rs  plugins.rs
crates/default-plugins/src/plugins/: dust.rs  lava.rs  rock.rs  sand.rs  steam.rs  water.rs
crates/func-holder/: cargo.toml
crates/func-holder/src/: lib.rs
crates/js-plugin/: Cargo.toml
crates/js-plugin/src/: blocks.rs  json_converter.rs  lib.rs  plugins.rs  tests.rs
crates/js-plugin/src/blocks/: actions.rs  conditions.rs  direction.rs  mod.rs  numbers.rs  transformations.rs  utiliies.rs
crates/sand/: Cargo.toml
crates/sand/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/water/: Cargo.toml
crates/water/src/: lib.rs
json_blockly_generator/: package-lock.json
json_blockly_generator/src/: index.html  index.js
json_blockly_generator/src/generators/: json.js
web/: app.wasm  data.json  index.html
