[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
libloading = "0.8.3"
app-core = { path = "crates/app-core", version = "*" }

[profile.release]
strip = "debuginfo"
opt-level = 2

[profile.production]
inherits = "release"
strip = "symbols"
codegen-units = 1

[workspace.metadata.docs.rs]
rust = "1.76.0"