[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
libloading = "0.8.3"
app-core = { path = "crates/app-core", version = "*" }
default-plugins = { path = "crates/default-plugins", version = "*" }

[profile.release]
strip = "debuginfo"
opt-level = 2

[profile.production]
inherits = "release"
strip = "symbols"
codegen-units = 1