[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
app-core = { path = "crates/app-core", version = "*" }
js-plugin = { path = "crates/js-plugin", version = "*" }
default-plugins = { path = "crates/default-plugins", version = "*" }

[profile.release]
strip = "debuginfo"
opt-level = 2

[profile.production]
inherits = "release"
opt-level = 3
strip = "symbols"
lto = true
codegen-units = 1
debug = false
panic = "abort"

[profile.production.package."*"]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3