[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-core.workspace = true
macroquad = { git = 'https://github.com/Nrosa01/macroquad.git', branch = 'update-from-bytes' }

[target.'cfg(not(wasm))'.dependencies]
default-plugins.workspace = true
libloading = "0.8.3"