[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-core.workspace = true
js-plugin.workspace = true
egui-macroquad = { version = "0.15.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.5"

[target.'cfg(not(wasm))'.dependencies]
default-plugins.workspace = true
libloading = "0.8.3"
